--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="choice_mode_multi">Multi</string>
     <string name="add">Add</string>
     <string name="clear">Clear</string>
+    <string name="delete">Delete</string>
 </resources>
